# kde-thumbnailer-ooxml

./: CMakeLists.txt  PKGBUILD  README.md  legacyofficepreview.cpp  legacyofficepreview.h  markdownpreview.cpp  markdownpreview.h  ooxmlcreator.cpp  ooxmlcreator.h  ooxmlthumbnail.json
libkowmf/: WmfAbstractBackend.h  WmfDeviceContext.cpp  WmfDeviceContext.h  WmfEnums.h  WmfPainterBackend.cpp  WmfPainterBackend.h  WmfParser.cpp  WmfParser.h  WmfStack.h
tools/: ooxmlpreviewjob.cpp
